# UCM

./: .gitignore  Cargo.toml  Skill.md  UCM_DESIGN.md
src/: lib.rs  main.rs
src/parser/: mod.rs  natural.rs
src/tools/: add.rs  convert.rs  diff.rs  info.rs  instructions.rs  mod.rs  now.rs  parse.rs  status.rs
src/types/: duration.rs  mod.rs  responses.rs
