[package]
name = "ucm"
version = "0.1.0"
edition = "2021"
description = "Universal Calendar Manager - MCP server for date/time calculations"
authors = ["Claude Code"]

[dependencies]
# MCP Server Framework (official Rust SDK)
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", features = ["server", "transport-io", "macros"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

# Date/Time Libraries
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Natural Language Parsing
two_timer = "2.2"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"
